[package]
name = "wasm_25519"
version = "0.1.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.ed25519-dalek]
version = "1.0.0-pre.2"
features = ["batch"]

[dependencies.x25519-dalek]
version = "0.6.0"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

js-sys = "0.3.32"

# Dalek's x25519 depends on rand crate's version 0.7 whereas ed25519 depends on rand crate's version 0.6
rand_07 = { package = "rand", version = "0.7", features = ["wasm-bindgen"]}
rand_06 = { package = "rand", version = "0.6", features = ["wasm-bindgen"]}
sha2 = "0.8"
generic-array = "0.13.2"

serde_json = "1"
serde_derive = "1"
serde = "1"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"